<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FeedFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipeRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/recipe" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/emptyStateImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_empty_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emptyStateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_state_text"
        android:textSize="30sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/emptyStateImage"
        app:layout_constraintStart_toStartOf="@id/emptyStateImage"
        app:layout_constraintTop_toBottomOf="@id/emptyStateImage" />

    <TextView
        android:id="@+id/emptyStateTextShouldBeDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_state_text_done"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/emptyStateText"
        app:layout_constraintStart_toStartOf="@id/emptyStateText"
        app:layout_constraintTop_toBottomOf="@id/emptyStateText" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/emptyStateGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="emptyStateImage, emptyStateText, emptyStateTextShouldBeDone"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="72dp"
        android:contentDescription="@string/add_recipe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>